Fix java 8 compiler issue